2000-02-09  Andreas Jaeger  <aj@suse.de>

	* time/strptime.c (strptime_internal): Fix pointer dereference.
	Patch by Juergen Heinzl <juergen@monocerus.demon.co.uk>, closes PR
	libc/1591.

2000-02-08  Jakub Jelinek  <jakub@redhat.com>

	* sysdeps/unix/sysv/linux/alpha/msgctl.c: New file.
	* sysdeps/unix/sysv/linux/alpha/semctl.c: New file.
	* sysdeps/unix/sysv/linux/alpha/shmctl.c: New file.
	* sysdeps/unix/sysv/linux/alpha/syscalls.list (msgctl, semctl,
	shmctl): Make them EXTRA as __old_* and as GLIBC_2.0 symbols.
	* sysdeps/unix/sysv/linux/alpha/Makefile: Add oldmsgctl, oldsemctl
	and oldshmctl to sysdep-routines.

2000-02-08  Andreas Jaeger  <aj@suse.de>

	* locale/programs/locale.c (write_locales): Fix handling of
	whitespace lines.
	Fixes PR libc/1588, reported by Miroslav Holcak
	<miroslav.holcak@vitkovice.cz>.

2000-02-07  Thorsten Kukuk  <kukuk@suse.de>

	* config.make.in: Add infodir.
	* sysdeps/unix/sysv/linux/sparc/bits/termios.h: Sync with kernel
	header files.

2000-02-11  Ulrich Drepper  <drepper@redhat.com>

	* posix/getopt.c: Suppress messages if first character of
	optstring is a colon (PR libc/1584).

	* sysdeps/unix/sysv/linux/powerpc/sys/procfs.h: Define ELF_* constants
	and elf_* types to interpret values passed up from the kernel.
	Patch by Franz Sirl <Franz.Sirl-kernel@lauterbach.com>.

	* locale/nl_langinfo.c: Correct return value in error case.  Don't
	set errno (PR libc/1582).
	* manual/locale.texi: Update to reflect change.

2000-02-02  Andreas Schwab  <schwab@suse.de>

	* malloc/Makefile (distribute): Add memprof.h.
	* malloc/memprof.c: Move definition of GETSP and GETTIME to new
	header memprof.h.
	* sysdeps/generic/memprof.h: New file.
	* sysdeps/alpha/memprof.h: New file.
	* sysdeps/i386/memprof.h: New file.
	* sysdeps/m68k/memprof.h: New file.
	* sysdeps/mips/memprof.h: New file.
	* sysdeps/powerpc/memprof.h: New file.
	* sysdeps/sparc/memprof.h: New file.

2000-02-01  Jakub Jelinek  <jakub@redhat.com>
